Fix issue with pipe pushing screen too wide; improving text position.

--- a/assets/stylesheets/layout/_panel-intro.scss
+++ b/assets/stylesheets/layout/_panel-intro.scss
@@ -30,6 +30,10 @@
 }
 
 @include tablet {
+	#masthead {
+		overflow: hidden;
+	}
+
 	#masthead .wrap {
 		max-width: 840px;
 		padding-top: 0;
@@ -95,16 +99,15 @@
 
 	/* Move content block to right */
 	#masthead .content-wrapper {
-		float: left;
 		position: relative;
-		width: calc(100% - 300px);
 		z-index: 1;
 	}
 
 	#masthead .intro-content {
-		margin: 260px auto 0;
-		max-width: 650px;
-		padding-left: 50px;
+		margin-left: 100px;
+		max-width: 100%;
+		width: 550px;
+		padding: 260px 0 0;
 	}
 }
 
